--- a/employe/templates/employe/index.html
+++ b/employe/templates/employe/index.html
@@ -52,7 +52,7 @@
             <div class="flex justify-between items-center">
                 <div>
                     <h1 class="text-4xl font-bold text-gray-800 mb-2">
-                        <i class="fas fa-users text-purple-600 mr-3"></i>Gestion des Employés (😊)
+                        <i class="fas fa-users text-purple-600 mr-3"></i>Gestion des Employés (😊😊)
                     </h1>
                     <p class="text-gray-600">Gérez votre équipe efficacement</p>
                 </div>
